MOBI-117 moved header z-index to a lower value to avoid hiding the progress notification annimation.
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@26846 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/components/component/src/org/icefaces/component/panelstack/honeycomb/default-panel-stack.css
+++ b/components/component/src/org/icefaces/component/panelstack/honeycomb/default-panel-stack.css
@@ -22,7 +22,7 @@
 
 .mobi-panel-stack-header {
     width: 100%;
-    z-index: 999;
+    z-index: 500;
 }
 
 .mobi-panel-stack-header {
