--- a/components/component/src/org/icefaces/component/panelstack/iphone/default-panel-stack.css
+++ b/components/component/src/org/icefaces/component/panelstack/iphone/default-panel-stack.css
@@ -18,7 +18,7 @@
     position: fixed;
     width: 100%;
     text-align: center;
-    z-index: 999;
+    z-index: 500;
     margin: 0;
     padding: 0;
 }
